--- a/css/index.css
+++ b/css/index.css
@@ -64,6 +64,9 @@ a.selected-button {
     background-color: #888;
 }
 
+/*
+ * Text
+ */
 p.info-block {
     width: 50%;
     transform: translate(50%, 0);
@@ -75,6 +78,11 @@ p.info-block > span {
 
 p.hidden-block {
     display: none;
+}
+
+p.info-block > img {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 /*
